# tech_test_lulo_bank

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  challenge.md  docker-compose.yml  pyproject.toml  servers.json
app/: container.py  main.py  setup.py
app/db_connections/: __init__.py  config.py  container.py
app/db_connections/application/: __init__.py  database_connection_service.py
app/db_connections/application/services/: __init__.py  database_connection_service.py
app/db_connections/domain/models/: __init__.py  connection_config.py
app/db_connections/domain/ports/: __init__.py  db_connector.py
app/extract/: __init__.py  container.py
app/extract/application/services/: __init__.py  extract_storage_service.py
app/extract/domain/ports/: __init__.py  tvmaze_extractor.py
app/extract/domain/services/: __init__.py  extract_service.py
app/extract/routes/: __init__.py  extract_route.py  extract_storage_route.py
app/file_io/: __init__.py  container.py
app/file_io/application/dtos/: __init__.py  path_io_dto.py  reader_config_dto.py  writer_config_dto.py
app/file_io/application/services/: __init__.py  reader_writer_selector_service.py
app/file_io/domain/ports/: __init__.py  file_writer.py
app/file_io/domain/value_objects/: __init__.py  file_format.py  reader_engine.py  storage_source.py  writer_engine.py
app/load/: __init__.py  container.py
app/load/routes/: __init__.py  load_to_db_route.py
app/load/scripts/: init_db.py
app/transform/: __init__.py  container.py
app/transform/routes/: __init__.py  data_cleaning_route.py  profiling_route.py
dockerfiles/: dockerfile.debug  dockerfile.local
file_io/: __init__.py  container.py
file_io/domain/ports/: __init__.py  file_reader.py
file_io/infrastructure/adapters/: __init__.py
json/date=2024-01-01/: 2625941.json  2657625.json  2659603.json  2670549.json  2679406.json  2679627.json  2679629.json  2679630.json  2679631.json  2679632.json  2679633.json  2679634.json  2689735.json  2692646.json  2692647.json  2692648.json  2692649.json  2692650.json  2692651.json  2692652.json  2692653.json  2692654.json  2692655.json  2692656.json  2692657.json  2694272.json  2696937.json  2703750.json  2703751.json  2703752.json  2703753.json  2703754.json  2703755.json  2704540.json  2704646.json  2705027.json  2705690.json  2708125.json  2708126.json  2711915.json  (+225 more)
tests/: conftest.py
tests/unit/db_connections/: conftest.py  test_db_connections_container.py
tests/unit/extract/: conftest.py  test_extract_container.py
tests/unit/file_io/: test_file_io_container.py
(+121 files in other folders)
