[project]
name = "app"
version = "0.0.1"
description = "Lulo Bank Tech Test"
authors = [
    {name = "julian-icruz",email = "julian.iguavita@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "dependency-injector (>=4.46.0,<5.0.0)",
    "polars (>=1.26.0,<2.0.0)",
    "dask (>=2025.3.0,<2026.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pre-commit = "^4.2.0"

