[project]
name = "app"
version = "0.0.1"
description = "Lulo Bank Tech Test"
authors = [
    {name = "julian-icruz",email = "julian.iguavita@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "dependency-injector (>=4.46.0,<5.0.0)",
    "polars (>=1.26.0,<2.0.0)",
    "dask (>=2025.3.0,<2026.0.0)",
    "boto3 (>=1.37.23,<2.0.0)",
    "pyarrow (>=19.0.1,<20.0.0)",
    "pdfkit (>=1.0.0,<2.0.0)",
    "weasyprint (>=65.0,<66.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "mysql-connector-python (>=9.2.0,<10.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pre-commit = "^4.2.0"
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
ipykernel = "^6.29.5"


[tool.pytest.ini_options]
pythonpath = [
    "."
]
